grammar.js
    source_file: $ => repeat($._root),
    _root: $ => choice(
      $.extern_import,
      $.import,
      $.external_function,
      alias($.module_method, $.method),
      $.class,
      $.trait,
      $.implement_trait,
      $.reopen_class,
      $._expression,
      $.define_constant,
    ),

    // Imports
    import: $ => prec.right(
      seq(
        'import',
        field('path', $.path),
        field('symbols', optional($.symbols)),
        field('tags', optional($.tags)),
      )
    ),
    path: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    symbols: $ => seq(
      '(',
      comma_list(choice(
        $.import_as,
        $.self,
        $.constant,
        $.identifier,
        alias($.identifier_with_special, $.identifier),
      )),
      ')'
    ),
    import_as: $ => choice(
      import_as($.self, $.identifier),
      import_as(
        alias($.identifier, $.identifier),
        alias($.identifier, $.identifier),
      ),
      import_as(
        alias($.identifier_with_special, $.identifier),
        alias($.identifier_with_special, $.identifier),
      ),
      import_as($.constant, $.constant),
    ),
    tags: $ => prec.right(seq('if', list($.identifier, 'and', false))),
    external_function: $ => prec.right(
      seq(
        'fn',
        field('visibility', optional($.visibility)),
        'extern',
        field('name', alias($.method_name, $.identifier)),
        field('arguments', optional(alias($.extern_arguments, $.arguments))),
        field('returns', optional($._returns)),
        field('body', optional($.block)),
      )
    ),
    argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),
    rest_argument: _ => '...',
    _returns: $ => seq('->', $._type),
    type_parameters: $ => seq('[', comma_list($.type_parameter), ']'),
    type_parameter: $ => seq(
      field('name', $.constant),
      field(
        'requirements',
        optional(alias($.type_parameter_requirements, $.requirements))
      ),
    ),
    trait: $ => seq(
      'trait',
      field('visibility', optional($.visibility)),
      field('name', $.constant),
      field('type_parameters', optional($.type_parameters)),
      field('requirements', optional($.required_traits)),
      field('body', $.trait_body),
    ),
    trait_body: $ => seq('{', repeat(alias($.trait_method, $.method)) , '}'),
    required_traits: $ => seq(':', list($._required_trait, '+', false)),
    _required_trait: $ => choice($.generic_type, alias($.constant, $.type)),

    // Implementing traits
    implement_trait: $ => seq(
      'impl',
      field('trait', choice($.generic_type, alias($.constant, $.type))),
      'for',
      field('class', $.constant),
      field('bounds', optional($.bounds)),
      field('body', $.implement_trait_body),
    ),
    implement_trait_body: $ => seq(
      '{',
      repeat(alias($.class_method, $.method)) ,
      '}'
    ),
    bounds: $ => seq('if', comma_list($.bound)),
    bound: $ => seq(
      field('name', $.constant),
      field('requirements', alias($.bound_requirements, $.requirements)),
    ),
    reopen_class: $ => seq(
      'impl',
      field('name', $.constant),
      field('bounds', optional($.bounds)),
      field('body', $.reopen_class_body),
    ),
    reopen_class_body: $ => seq(
      '{',
      repeat(alias($.class_method, $.method)) ,
      '}'
    ),

    // Type signatures
    _type: $ => choice(
      prec.left($.generic_type),
      prec.right(alias($.constant, $.type)),
      $.ref_type,
      $.mut_type,
      $.uni_type,
      $.fn_type,
      $.tuple_type,
      $.move_type,
    ),
    generic_type: $ => seq(
      field('name', $.constant),
      field('arguments', $.type_arguments),
    ),
    type_arguments: $ => seq('[', comma_list($._type), ']'),
    ref_type: $ => seq('ref', field('type', $._type)),
    mut_type: $ => seq('mut', field('type', $._type)),
    uni_type: $ => seq('uni', field('type', $._type)),
    move_type: $ => seq('move', field('type', $._type)),
    fn_type: $ => prec.right(
      seq(
        'fn',
        field('modifier', optional(alias($.move, $.modifier))),
        field('arguments', optional(alias($.fn_type_arguments, $.arguments))),
        field('returns', optional($._returns)),
      )
    ),
    tuple_type: $ => seq('(', comma_list($._type), ')'),

    // Expressions
    block: $ => seq('{', repeat($._expression), '}'),
    _expression: $ => choice(
      $.not,
      $.binary,
      $.define_variable,
      $.float,
      $.integer,
      $.self,
      $.nil,
      $.true,
      $.false,
      $.block,
      $.string,
      alias($.and_or, $.binary),
      $.cast,
      $.grouped_expression,
      $.tuple,
      $.array,
      $.break,
      $.return,
      $.next,
      $.try,
      $.async,
      $.await,
      $.throw,
      $.closure,
      $.field,
      $.if,
      $.while,
      $.loop,
      $.for,
      $.match,
      $.ref,
      $.mut,
      $.recover,
      prec.right($.identifier),
      $.call,
      $.constant,
      alias($.call_with_receiver, $.call),
      $.assign_receiver_field,
      $.assign_local,
      $.assign_field,
      $.replace_receiver_field,
      $.replace_local,
      $.replace_field,
      $.compound_assign_local,
      $.compound_assign_field,
      $.compound_assign_receiver_field,
    ),
    mut: $ => prec.right(seq('mut', $._expression)),
    self: _ => 'self',
    mutable: _ => 'mut',
    inline: _ => 'inline',
    visibility: _ => 'pub',
    line_comment: _ => token(prec(-1, seq('#', /.*/))),
    identifier: _ => /([a-z]|_)[a-zA-Z\d_]*/,
    constant: _ => /[A-Z][a-zA-Z\d_]*/
  }
});
